# victron-ble2mqtt

./: .pre-commit-config.yaml  README.md  cli.py  dev-cli.py  pyproject.toml  requirements.dev.txt  requirements.txt
.run/: Template Python tests.run.xml  Unittests - __all__.run.xml
victron_ble2mqtt/: __init__.py  __main__.py  constants.py  mapping.py  mqtt.py  user_settings.py  victron_ble_utils.py  wifi_info.py
victron_ble2mqtt/cli/: cli_app.py  dev.py
victron_ble2mqtt/cli_app/: __init__.py  debug.py  mqtt.py  settings.py  shell_completion.py  systemd.py  update_readme_history.py  wifi_info.py
victron_ble2mqtt/cli_dev/: __init__.py  __main__.py  code_style.py  packaging.py  shell_completion.py  testing.py  update_readme_history.py
victron_ble2mqtt/tests/: __init__.py  test_doctests.py  test_mqtt.py  test_project_setup.py  test_readme.py  test_wifi_info.py  test_wifi_info_happy_path_1.snapshot.json
